--- a/002-meals-app/package.json
+++ b/002-meals-app/package.json
@@ -12,7 +12,8 @@
     "better-sqlite3": "^11.7.2",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
